# nprflash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
nprflash/: __init__.py  __main__.py  bootloader.py  cbor.py  cli.py  cobs.py  console.py  container.py  hmi.py  netflash.py  protocol.py  transport.py
tests/: conftest.py  test_bootloader.py  test_cbor.py  test_cobs.py  test_container.py  test_netflash.py  test_protocol.py
tests/fixtures/: frames.json
